# GeneratedTextDetection-MLOps

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  models.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/export/: default.yaml
configs/inference/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: RoBERTa-base.yaml  RoBERTa-large.yaml  bert_tiny.yaml
configs/training/: default.yaml
data/: raw.dvc
generation_detector/generation_detector/: data_module.py  export_onnx.py  model.py  predict.py  serving_model_wrapper.py  train.py  utils.py
scripts/: demo_client_request.py
