[project]
name = "generatedtextdetection-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
    "pandas>=2.2.3",
    "torch>=2.6.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" }
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true